--- a/bootcamp/R/0_intro_to_ML_R.ipynb
+++ b/bootcamp/R/0_intro_to_ML_R.ipynb
@@ -4,10 +4,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. ROC curve for trees"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Machine Learning: Key Terms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " <tr>\n",
+    "    <td> <img src=\"confusion_matrix.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
+    "    <td> <img src=\"bootstrapping.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
+    "    </tr>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# R Packages We'll Use\n",
     "\n",
     "* caret: package for Classification And REgression Training (https://topepo.github.io/caret/index.html)\n",
+    "* tidyverse: set of packages for tidy data science (https://www.tidyverse.org)\n",
+    "* keras: interface for R into the keras deep learning library (https://keras.rstudio.com)\n",
+    "* rpart: package for Recursive Partioning And Regression Trees (https://cran.r-project.org/web/packages/rpart/rpart.pdf)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in install.packages(\"tidyverse\", \"skimr\", \"AppliedPredictiveModeling\", :\n",
+      "“'lib = \"skimr\"' is not writable”"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in install.packages(\"tidyverse\", \"skimr\", \"AppliedPredictiveModeling\", : unable to install packages\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in install.packages(\"tidyverse\", \"skimr\", \"AppliedPredictiveModeling\", : unable to install packages\nTraceback:\n",
+      "1. install.packages(\"tidyverse\", \"skimr\", \"AppliedPredictiveModeling\", \n .     \"keras\", \"modelr\", \"rpart\")",
+      "2. stop(\"unable to install packages\")"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"tidyverse\", \"caret\", \"skimr\", \"AppliedPredictiveModeling\", \"keras\", \"modelr\", \"rpart\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Machine Learning Process\n",
+    "\n",
+    "* Exploratory data analysis\n",
+    "* Build the simplest model\n",
+    "* Iterate\n"
    ]
   },
   {
@@ -23,28 +99,23 @@
    "source": [
     "* Alligator Data: https://www.r-bloggers.com/simple-linear-regression-2/\n",
     "* Abalone Data: http://archive.ics.uci.edu/ml/datasets/Abalone\n",
-    "* Useful worked example: https://cfss.uchicago.edu/persp003_linear_regression.html\n",
-    "* Modeling in the tidyverse: http://r4ds.had.co.nz/model-basics.html\n",
-    "* Exploratory visualizations: https://machinelearningmastery.com/data-visualization-in-r/\n"
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Resources\n",
+    "* DataCamp’s Machine Learning with R skill track (requires paid access).\n",
+    "* Useful worked example: https://cfss.uchicago.edu/persp003_linear_regression.html\n",
+    "* Modeling in the tidyverse: http://r4ds.had.co.nz/model-basics.html\n",
+    "* Exploratory visualizations: https://machinelearningmastery.com/data-visualization-in-r/\n",
+    "* https://tutorials.iq.harvard.edu/R/Rstatistics/Rstatistics.html\n",
+    "* MLR is working towards a scikit-like implementation https://github.com/mlr-org/mlr\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -94,70 +165,6 @@
     "In supervised learning (SML), the learning algorithm is presented with labelled example inputs, where the labels indicate the desired output. SML itself is composed of classification, where the output is categorical, and regression, where the output is numerical.\n",
     "\n",
     "In unsupervised learning (UML), no labels are provided, and the learning algorithm focuses solely on detecting structure in unlabelled input data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# different versions of modeling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in parse(text = x, srcfile = src): <text>:1:5: unexpected symbol\n1: The more\n        ^\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in parse(text = x, srcfile = src): <text>:1:5: unexpected symbol\n1: The more\n        ^\nTraceback:\n"
-     ]
-    }
-   ],
-   "source": [
-    "The more traditional approach uses high-level\n",
-    "syntax and is perhaps the most untidy code that\n",
-    "you will encounter.\n",
-    "caret is the primary package for untidy\n",
-    "predictive modeling:\n",
-    "1. More traditional R coding style.\n",
-    "2. High-level \"I'll do that for you\" syntax.\n",
-    "3. More comprehensive (for now) and less modular.\n",
-    "4. Contains many optimizations and is easily parallelized"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "The tidy modeling approach espouses the tenets\n",
-    "of the tidyverse:\n",
-    "1. Reuse existing data structures.\n",
-    "2. Compose simple functions with the pipe.\n",
-    "3. Embrace functional programming.\n",
-    "4. Design for humans.\n",
-    "This approach is exempli􀁿ed by packages such as\n",
-    "modelr , broom , recipes , rsample , yardstick , and\n",
-    "tidyposterior ."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# packages\n",
-    "\n",
-    "caret, ggplot2, mlbench, class, caTools, randomForst, impute, ranger\n",
-    "kernlab, class, glmnet, naivebayes, rpart, rpart.plot"
    ]
   },
   {
@@ -488,7 +495,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
