--- a/bootcamp/R/4_unsupervised.ipynb
+++ b/bootcamp/R/4_unsupervised.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In unsupervised learning (UML), no labels are provided, and the learning algorithm focuses solely on detecting structure in unlabelled input data. One generally differentiates between\n",
+    "In unsupervised learning, no labels are provided, and the learning algorithm focuses solely on detecting structure in unlabelled input data. One generally differentiates between\n",
     "\n",
     "Clustering, where the goal is to find homogeneous subgroups within the data; the grouping is based on distance between observations.\n",
     "\n",
@@ -180,6 +180,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "R",
    "language": "R",
