--- a/bootcamp/R/5_basic_neural_networks.ipynb
+++ b/bootcamp/R/5_basic_neural_networks.ipynb
@@ -7,12 +7,62 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "Deep learning in R\n",
+    "library(keras)\n",
+    "install_keras()\n",
     "\n",
-    "This book focuses on introductory material in R. This shouldn’t however give the impression that more modern approaches are not available. R has plenty of activity arounds deep learning such as, for example, the keras package, an interface to Keras, a high-level neural networks API.\n",
+    "mnist <- dataset_mnist()\n",
+    "x_train <- mnist$train$x\n",
+    "y_train <- mnist$train$y\n",
+    "x_test <- mnist$test$x\n",
+    "y_test <- mnist$test$y\n",
     "\n",
-    "See this blog for an introduction.\n",
+    "# reshape\n",
+    "x_train <- array_reshape(x_train, c(nrow(x_train), 784))\n",
+    "x_test <- array_reshape(x_test, c(nrow(x_test), 784))\n",
+    "# rescale\n",
+    "x_train <- x_train / 255\n",
+    "x_test <- x_test / 255\n",
+    "\n",
+    "y_train <- to_categorical(y_train, 10)\n",
+    "y_test <- to_categorical(y_test, 10)\n",
+    "\n",
+    "model <- keras_model_sequential() \n",
+    "model %>% \n",
+    "  layer_dense(units = 256, activation = 'relu', input_shape = c(784)) %>% \n",
+    "  layer_dropout(rate = 0.4) %>% \n",
+    "  layer_dense(units = 128, activation = 'relu') %>%\n",
+    "  layer_dropout(rate = 0.3) %>%\n",
+    "  layer_dense(units = 10, activation = 'softmax')\n",
+    "\n",
+    "summary(model)\n",
+    "\n",
+    "model %>% compile(\n",
+    "  loss = 'categorical_crossentropy',\n",
+    "  optimizer = optimizer_rmsprop(),\n",
+    "  metrics = c('accuracy')\n",
+    ")\n",
+    "\n",
+    "history <- model %>% fit(\n",
+    "  x_train, y_train, \n",
+    "  epochs = 30, batch_size = 128, \n",
+    "  validation_split = 0.2\n",
+    ")\n",
+    "\n",
+    "plot(history)\n",
+    "\n",
+    "model %>% evaluate(x_test, y_test)\n",
+    "\n",
+    "model %>% predict_classes(x_test)\n",
     "\n"
    ]
   },
@@ -26,15 +76,13 @@
    "source": [
     "6.4 References and further reading\n",
     "\n",
-    "caret: Classification and Regression Training. Max Kuhn. https://CRAN.R-project.org/package=caret.\n",
-    "Applied predictive modeling, Max Kuhn and Kjell Johnson (book webpage http://appliedpredictivemodeling.com/) and the caret book.\n",
-    "An Introduction to Statistical Learning (with Applications in R). Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani.\n",
     "mlr: Machine Learning in R. Bischl B, Lang M, Kotthoff L, Schiffner J, Richter J, Studerus E, Casalicchio G and Jones Z (2016). Journal of Machine Learning Research, 17(170), pp. 1-5. https://github.com/mlr-org/mlr.\n",
     "DataCamp’s Machine Learning with R skill track (requires paid access)."
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "R",
    "language": "R",
