--- a/bootcamp/R/0_intro_to_ML_R.ipynb
+++ b/bootcamp/R/0_intro_to_ML_R.ipynb
@@ -11,7 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. ROC curve for trees"
+    "1. ROC curve for trees + logistic regression\n",
+    "2. Cross validation of linear regression -- see bottom of script\n",
+    "3. Better model metrics around linear regression + logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Machine Learning Process\n",
+    "\n",
+    "* Exploratory data analysis\n",
+    "* Build the simplest model\n",
+    "* Iterate\n"
    ]
   },
   {
@@ -73,17 +86,6 @@
    ],
    "source": [
     "install.packages(\"tidyverse\", \"caret\", \"skimr\", \"AppliedPredictiveModeling\", \"keras\", \"modelr\", \"rpart\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# The Machine Learning Process\n",
-    "\n",
-    "* Exploratory data analysis\n",
-    "* Build the simplest model\n",
-    "* Iterate\n"
    ]
   },
   {
