--- a/bootcamp/R/5_basic_neural_networks.ipynb
+++ b/bootcamp/R/5_basic_neural_networks.ipynb
@@ -2,12 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using r-tensorflow conda environment for TensorFlow installation\n",
+      "Determining latest installable release of TensorFlow...done\n",
+      "Installing TensorFlow...\n",
+      "\n",
+      "Installation complete.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "library(keras)\n",
+    "install_keras()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error: ImportError: cannot import name 'abs'\n\nDetailed traceback: \n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/__init__.py\", line 3, in <module>\n    from . import utils\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/utils/__init__.py\", line 6, in <module>\n    from . import conv_utils\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/utils/conv_utils.py\", line 9, in <module>\n    from .. import backend as K\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/backend/__init__.py\", line 87, in <module>\n    from .tensorflow_backend import *\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py\", line 5, in <module>\n    import tensorflow as tf\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/__init__.py\", line 22, in <module>\n    from tensorflow.python import pywrap_tensorflow  # pylint: disable=unused-import\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/__init__.py\", line 81, in <module>\n    from tensorflow.python import keras\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/__init__.py\", line 24, in <module>\n    from tensorflow.python.keras import activations\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/activations/__init__.py\", line 22, in <module>\n    from tensorflow.python.keras._impl.keras.activations import elu\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/_impl/keras/__init__.py\", line 21, in <module>\n    from tensorflow.python.keras._impl.keras import activations\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/_impl/keras/activations.py\", line 23, in <module>\n    from tensorflow.python.keras._impl.keras import backend as K\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/_impl/keras/backend.py\", line 37, in <module>\n    from tensorflow.python.layers import base as tf_base_layers\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/layers/base.py\", line 25, in <module>\n    from tensorflow.python.keras.engine import base_layer\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/engine/__init__.py\", line 21, in <module>\n    from tensorflow.python.keras.engine.base_layer import InputSpec\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/engine/base_layer.py\", line 33, in <module>\n    from tensorflow.python.keras import backend\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/backend/__init__.py\", line 22, in <module>\n    from tensorflow.python.keras._impl.keras.backend import abs\n\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: ImportError: cannot import name 'abs'\n\nDetailed traceback: \n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/__init__.py\", line 3, in <module>\n    from . import utils\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/utils/__init__.py\", line 6, in <module>\n    from . import conv_utils\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/utils/conv_utils.py\", line 9, in <module>\n    from .. import backend as K\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/backend/__init__.py\", line 87, in <module>\n    from .tensorflow_backend import *\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py\", line 5, in <module>\n    import tensorflow as tf\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/__init__.py\", line 22, in <module>\n    from tensorflow.python import pywrap_tensorflow  # pylint: disable=unused-import\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/__init__.py\", line 81, in <module>\n    from tensorflow.python import keras\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/__init__.py\", line 24, in <module>\n    from tensorflow.python.keras import activations\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/activations/__init__.py\", line 22, in <module>\n    from tensorflow.python.keras._impl.keras.activations import elu\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/_impl/keras/__init__.py\", line 21, in <module>\n    from tensorflow.python.keras._impl.keras import activations\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/_impl/keras/activations.py\", line 23, in <module>\n    from tensorflow.python.keras._impl.keras import backend as K\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/_impl/keras/backend.py\", line 37, in <module>\n    from tensorflow.python.layers import base as tf_base_layers\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/layers/base.py\", line 25, in <module>\n    from tensorflow.python.keras.engine import base_layer\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/engine/__init__.py\", line 21, in <module>\n    from tensorflow.python.keras.engine.base_layer import InputSpec\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/engine/base_layer.py\", line 33, in <module>\n    from tensorflow.python.keras import backend\n  File \"/Users/caitlin/anaconda/envs/r-tensorflow/lib/python3.6/site-packages/tensorflow/python/keras/backend/__init__.py\", line 22, in <module>\n    from tensorflow.python.keras._impl.keras.backend import abs\n\nTraceback:\n",
+      "1. dataset_mnist()",
+      "2. keras$datasets",
+      "3. `$.python.builtin.module`(keras, \"datasets\")",
+      "4. py_resolve_module_proxy(x)",
+      "5. on_error(result)",
+      "6. stop(e$message, call. = FALSE)"
+     ]
+    }
+   ],
+   "source": [
+    "mnist <- dataset_mnist()"
+   ]
   },
   {
    "cell_type": "code",
@@ -17,10 +60,9 @@
    },
    "outputs": [],
    "source": [
-    "library(keras)\n",
-    "install_keras()\n",
     "\n",
-    "mnist <- dataset_mnist()\n",
+    "\n",
+    "\n",
     "x_train <- mnist$train$x\n",
     "y_train <- mnist$train$y\n",
     "x_test <- mnist$test$x\n",
@@ -65,20 +107,6 @@
     "model %>% predict_classes(x_test)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "6.4 References and further reading\n",
-    "\n",
-    "mlr: Machine Learning in R. Bischl B, Lang M, Kotthoff L, Schiffner J, Richter J, Studerus E, Casalicchio G and Jones Z (2016). Journal of Machine Learning Research, 17(170), pp. 1-5. https://github.com/mlr-org/mlr.\n",
-    "DataCamp’s Machine Learning with R skill track (requires paid access)."
-   ]
   }
  ],
  "metadata": {
@@ -94,7 +122,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
